[package]
name = "pw_push_to_talk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = "0.8.0"
pipewire-sys = "0.8.0"
libspa = "0.8.0"
libspa-sys = "0.8.0"
clap = "4.4.8"
evdev = "0.12.1"
libc = "0.2"
input = "0.9.1"
nix = { version = "0.27.1", features = ["poll"] }
